...
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="textStart" />
            
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_share_item"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Share"
                android:textSize="12sp"
                android:paddingTop="6dp"
...
                android:textSize="12sp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Item Description -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_item_description"
            style="@style/Widget.App.TextInputLayout.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="Description"
            app:startIconDrawable="@android:drawable/ic_menu_sort_by_size"
...
