...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_my_posts_description"
        tools:listitem="@layout/item_my_post"
        android:layout_marginBottom="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_empty_posts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
